--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
        
         <section class="wrapper">
             <div class="div-1">
-                Div 1
+                I was born and raised in Austin, Texas, but my roots reach to South America. I love to travel and photograph different regions of the United States. We never had money for vacations as a child so I jump on every opportnity to explore the world.
             </div>
             <div class="div-2">
-                Div 2
+                My passion is art and the abundance of unique work you can explore through different mediums. I love beautiful things and the ability to capture them with my camera is what makes me the happiest version of myself. The outdoors inspire the color schemes and layouts I choose.
             </div>
             <div class="div-3">
-                Div 3
+                I originally went to school to study economics and human behavior. Somewhere along the way, I found a happy middle-ground that allows me to understand the market for art and how it reflects the time, effort, and authenticity of an artist work.
             </div>
         </section>    
 
